--- a/src/output.css
+++ b/src/output.css
@@ -524,6 +524,46 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.fixed{
+  position: fixed;
+}
+
+.bottom-0{
+  bottom: 0px;
+}
+
+.left-0{
+  left: 0px;
+}
+
+.right-0{
+  right: 0px;
+}
+
+.top-0{
+  top: 0px;
+}
+
+.z-50{
+  z-index: 50;
+}
+
+.z-10{
+  z-index: 10;
+}
+
+.ml-auto{
+  margin-left: auto;
+}
+
+.mr-5{
+  margin-right: 1.25rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
+}
+
 .flex{
   display: flex;
 }
@@ -566,6 +606,14 @@ video {
   animation: spin 1s linear infinite;
 }
 
+.cursor-pointer{
+  cursor: pointer;
+}
+
+.items-end{
+  align-items: flex-end;
+}
+
 .items-center{
   align-items: center;
 }
@@ -598,8 +646,17 @@ video {
   border-radius: 0.375rem;
 }
 
+.rounded-t-md{
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
+}
+
 .border{
   border-width: 1px;
+}
+
+.border-t-\[12px\]{
+  border-top-width: 12px;
 }
 
 .border-blue-600{
@@ -622,8 +679,17 @@ video {
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
 }
 
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .bg-opacity-40{
   --tw-bg-opacity: 0.4;
+}
+
+.bg-opacity-70{
+  --tw-bg-opacity: 0.7;
 }
 
 .p-2{
@@ -648,6 +714,10 @@ video {
 .py-4{
   padding-top: 1rem;
   padding-bottom: 1rem;
+}
+
+.text-center{
+  text-align: center;
 }
 
 .text-base{
@@ -722,6 +792,20 @@ video {
 .disabled\:bg-gray-300:disabled{
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
+}
+
+@media (min-width: 768px){
+  .md\:w-auto{
+    width: auto;
+  }
+
+  .md\:items-center{
+    align-items: center;
+  }
+
+  .md\:rounded-md{
+    border-radius: 0.375rem;
+  }
 }
 
 @media (min-width: 1024px){
